2020-09-06  Bruno Haible  <bruno@clisp.org>

	build: Add support for clang on Windows.
	* m4/woe32-dll.m4 (gl_WOE32_DLL): Set gl_cv_ld_autoimport to 'no' on
	MSVC and MSVC/clang.

2020-08-30  Bruno Haible  <bruno@clisp.org>

	build: Update after gnulib changed.
	* configure.ac (AC_PREREQ): Bump minimum Autoconf version to 2.64.

2020-05-07  Daiki Ueno  <ueno@gnu.org>

	build: Update after gnulib changed
	In the latest Gnulib, the definition of _GL_UNUSED_PARAMETER is
	expanded at configure time of the consumer project.  Let's include
	only the fallback definition in <unistring/cdefs.h>.
	Suggested by Dmitry Baryshkov <dbaryshkov@gmail.com> in:
	<https://lists.gnu.org/archive/html/bug-libunistring/2020-05/msg00001.html>.
	* lib/Makefile.am (unistring/cdefs.h): Don't generate the file.
	* lib/unistring/cdefs.h: Include the expanded form instead of ...
	* lib/unistring/cdefs.in.h: ... this.
	* gnulib-m4/.gitignore, gnulib-m4/gnulib-cache.m4, lib/.gitignore,
	tests/.gitignore: Updated.

2019-12-23  Bruno Haible  <bruno@clisp.org>

	doc: Update description of locale_charset.
	* doc/uniconv.texi (uniconv.h): Fix reference to config.charset, which
	was removed on 2018-05-19.

2019-12-22  Bruno Haible  <bruno@clisp.org>

	build: Don't erase the .sym file if 'sed' is not GNU sed.
	* lib/Makefile.am (libunistring.sym): Test the exit status of the
	declared.sh command. Preserve the existing libunistring.sym if it
	failed.

2019-12-22  Bruno Haible  <bruno@clisp.org>

	build: Update after gnulib changed.
	* lib/Makefile.am (libunistring.sym): Don't rename the
	gl_get_setlocale_null_lock function.
	* NEWS: Document the fixed multithread-safety bugs:
	  2019-12-18  Bruno Haible  <bruno@clisp.org>
	      hard-locale: Make multithread-safe.
	      This fix impacts mbrtowc on Cygwin and Haiku.
	  2019-12-17  Bruno Haible  <bruno@clisp.org>
	      localcharset: Fix multithread-safety bug on Windows and OS/2.

2019-12-22  Bruno Haible  <bruno@clisp.org>
